<resources>
    <string name="app_name">musicPlayer</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="song_name">Akh lad jave</string>
    <string name="previous"><![CDATA[|<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="next"><![CDATA[>|]]></string>
</resources>
